<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_available_tours"
            android:icon="@drawable/ic_map_location"
            android:title="@string/available_tours" />

        <item
            android:id="@+id/nav_my_tours"
            android:icon="@drawable/ic_mountain"
            android:title="@string/my_tours" />

        <item
            android:id="@+id/nav_tour_location"
            android:icon="@drawable/ic_location_focus"
            android:title="@string/tour_location" />

    </group>

    <item android:title="Cuenta">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile_test"
                android:title="Mi Perfil" />
            
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>



</menu>
